[gd_scene load_steps=17 format=3 uid="uid://cnwmbv7wcnhyg"]

[ext_resource type="Script" path="res://scripts/Env.gd" id="1_w8bwp"]
[ext_resource type="Script" path="res://scripts/RGBCameraSensor3D.gd" id="7"]
[ext_resource type="Script" path="res://scripts/Chicken.gd" id="7_yv2m7"]
[ext_resource type="Environment" uid="uid://cukgutlsgtlxe" path="res://custom_env.tres" id="8"]
[ext_resource type="Script" path="res://scripts/Reward.gd" id="12"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_5wnix"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hygbk"]
size = Vector3(35, 1, 35)

[sub_resource type="BoxMesh" id="BoxMesh_pepf2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fy3mp"]
albedo_color = Color(0.501961, 0.501961, 0.501961, 1)
roughness = 0.14

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_6dxg7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mkftt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_traqe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2obbw"]
transparency = 1
albedo_color = Color(0.65098, 0.513726, 0.12549, 0.498039)

[sub_resource type="ViewportTexture" id="ViewportTexture_qxlc0"]
viewport_path = NodePath("Chicken/RGBCameraSensor3D/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ac0g"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_qxlc0")

[sub_resource type="PlaneMesh" id="PlaneMesh_ki5jv"]

[node name="Env" type="Node3D"]
script = ExtResource("1_w8bwp")

[node name="GUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 1.0
grow_vertical = 0

[node name="Reward" type="Label" parent="GUI/GridContainer"]
light_mask = 2
layout_mode = 2
script = ExtResource("12")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.79672, 0.604349, 0, -0.604349, 0.79672, 0, 0, 0)
layers = 3
shadow_enabled = true

[node name="UserCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.216, 0)
keep_aspect = 0
environment = ExtResource("8")
attributes = SubResource("CameraAttributesPractical_5wnix")
projection = 1
fov = 74.4375
size = 37.377

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.14365, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_hygbk")

[node name="CSGMesh3D" type="CSGMesh3D" parent="Floor/CollisionShape3D"]
transform = Transform3D(35, 0, 0, 0, 1.001, 0, 0, 0, 35, 0, 0, 0)
mesh = SubResource("BoxMesh_pepf2")
material = SubResource("StandardMaterial3D_fy3mp")

[node name="Chicken" type="CharacterBody3D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("7_yv2m7")

[node name="FOVCamera" type="Camera3D" parent="Chicken"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.192, 0)
cull_mask = 1048573
environment = ExtResource("8")
attributes = SubResource("CameraAttributesPractical_6dxg7")
fov = 30.0
size = 6.286
near = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chicken"]
shape = SubResource("CapsuleShape3D_mkftt")

[node name="CSGMesh3D" type="CSGMesh3D" parent="Chicken"]
layers = 2
mesh = SubResource("CapsuleMesh_traqe")
material = SubResource("StandardMaterial3D_2obbw")

[node name="RGBCameraSensor3D" type="Node3D" parent="Chicken"]
script = ExtResource("7")

[node name="SubViewport" type="SubViewport" parent="Chicken/RGBCameraSensor3D"]
size = Vector2i(64, 64)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Chicken/RGBCameraSensor3D/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.192, 0)
cull_mask = 1048573
environment = ExtResource("8")
attributes = SubResource("CameraAttributesPractical_6dxg7")
fov = 30.0
size = 6.286
near = 0.5

[node name="Items" type="Node3D" parent="."]

[node name="TestViewport" type="MeshInstance3D" parent="."]
transform = Transform3D(4.81118, 0, 0, 0, 1, 0, 0, 0, 4.81118, -11.1275, 2.51519, -11.2434)
visible = false
layers = 2
material_override = SubResource("StandardMaterial3D_0ac0g")
mesh = SubResource("PlaneMesh_ki5jv")

[connection signal="got_reward" from="Chicken" to="GUI/GridContainer/Reward" method="_on_chicken_got_reward"]
